[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engine"
version = "1.0.0"
description = "CNN BPM analysis engine"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
dependencies = [
    "deeprhythm>=0.0.13",
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
tempocnn-essentia = ["essentia"]
tempocnn-onnx = ["onnxruntime", "soundfile"]
all = ["essentia", "onnxruntime", "soundfile"]

[project.scripts]
engine = "engine.__main__:main"

[project.urls]
Repository = "https://github.com/double-half-bpm/engine"
